# sensession

./: .gitignore  .gitlab-ci.yml  .gitmodules  README.md  app.py  pyproject.toml
csi_tools/: .gitignore
csi_tools/nexmon-csi/: README.md  push_to_device.sh
evaluation/: common.py
evaluation/agc/: plot.py
evaluation/ax210_averaging/: plot.py
evaluation/base/: noise_characteristics.py  plots.py
evaluation/doppler/: music.py
evaluation/har/: plot.py
evaluation/methodology/: plots.py
evaluation/notebooks/: agc_behavior.ipynb  inspect_ax210_averaging.ipynb  mat_conversion.ipynb  numpy_conversion.ipynb  phase_jumps.ipynb  prepare_data.ipynb  rand_dyncurves.ipynb  sharp_doppler.ipynb  simple_inspect.ipynb  single_scs.ipynb
evaluation/single_scs/: plot.py  plot_channel_dependency.py  preprocess.py
examples/: asus_rx.py  campaign.py  dummy.py  esp_rx_esp_tx.py  esp_rx_usrp_tx.py  framegen.py  picoscenes_rx.py  picoscenes_tx.py  preprocess.py  process_campaign.py  sensei_rx.py  usrp_tx.py  vicon.py
experiments/: _00_base.py  _01_single_scs.py  _02_triangles.py  _03_rectangles.py  _04_expanding_blocks.py  _05_phase_jump.py  _06_random_timecurves.py  _07_aril.py  _08_doppler.py  _09_single_phases.py  _10_averaging_investigation.py  _20_methodology.py  _30_higher_bandwidths.py  _har_fabian.py  common.py
matlab/: generate_csimasked_frame.m  patch_wlan_toolbox.sh
matlab/nexmon_csi/: README.md  (+3 more)
scripts/: capture_qca.sh  install.sh  monitor_mode.sh  preprocess.py  transmit_from_sdr.sh  trim_tmp.sh
test/: config_test.py  frame_gen_test.py  processor_test.py
(+65 files in other folders)
