[project]
name = "sensession"
version = "1.0.0"
description = "Library to instrument sensing tests"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Fabian Portner", email = "fportner@seemoo.de"},
]

dependencies = [
	"numpy",
	"scipy",
	"pyarrow",
	"polars",
	"loguru",
	"rich",
	"requests",  # for usrpulse requests
	"websocket-client",
	"tqdm",
]


[project.optional-dependencies]
eval = [
	"matplotlib",
	"notebook",
	"seaborn",
]

dev = [
	"isort",
	"ruff",
	"mypy",
	"pylint",
	"pytest",
	"nb-clean",
	"types-requests"
]

app = [
	"typer",
]

matlab = [
	"matlabengine",
]

picoscenes = [
	"picoscenes"
]

esp32 = [
    "pyserial"
]

sensei = [
	"sensei"
]

[tool.isort]
profile = "black"
src_paths = ["src", "app.py", "test"]
length_sort = true


# pylint configuration
[tool.pylint]
max-line-length = 88
disable = ["C0301", "too-many-instance-attributes"]
extension-pkg-allow-list = ["sensei"]

# Mypy configuration
[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py311"
extend-include = ["*.ipynb"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = [
    "F401", # Imported but unused
    "F403", # Wildcard imports
]

[tool.ruff.lint.pydocstyle]
convention = "google"
